Fix alignment in header

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -72,6 +72,7 @@ button.cancel {
 .top{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header{
